--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "automation-node-starter",
-  "version": "0.0.4",
-  "description": "Development starter kit for node.js ts web3 automation nodes",
+  "name": "hade-balancer",
+  "version": "0.0.1",
+  "description": "Hade balancer node for arbitrage",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node src",
@@ -13,12 +13,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com:dgma/automation-node-starter.git"
+    "url": "git+https://github.com/dgma/hade-balancer.git"
   },
   "bugs": {
-    "url": "https://github.com:dgma/automation-node-starter/issues"
+    "url": "https://github.com/dgma/hade-balancer/issues"
   },
-  "homepage": "https://github.com:dgma/automation-node-starter#readme",
+  "homepage": "https://github.com/dgma/hade-balancer#readme",
   "keywords": [
     "node.js",
     "ts",
@@ -33,13 +33,13 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "viem": "^2.10.5"
+    "viem": "^2.13.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@types/node": "^20.14.0",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -47,12 +47,12 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-promise": "^6.2.0",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
-    "ts-jest": "^29.1.2",
+    "lint-staged": "^15.2.5",
+    "prettier": "^3.3.0",
+    "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
