--- a/package.json
+++ b/package.json
@@ -1,41 +1,50 @@
 {
-  "name": "hade-balancer",
+  "name": "withdraw-bot",
   "version": "0.0.1",
-  "description": "Hade balancer node for arbitrage",
+  "description": "Node.js app for randomized automatic withdrawal",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src",
+    "start": "nodemon src/index.ts",
+    "serve": "tsc; NODE_ENV=production node dist/index.js",
+    "build": "tsc",
     "test": "jest --passWithNoTests",
     "lint": "eslint src/**/*.ts",
     "prepare": "husky install",
     "typecheck": "tsc --noEmit --project ./tsconfig.json",
-    "build": "tsc"
+    "encrypt:dev": "ts-node scripts/input",
+    "encrypt": "NODE_ENV=production ts-node scripts/input"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dgma/hade-balancer.git"
+    "url": "git+https://github.com/dgma/withdraw-bot.git"
   },
   "bugs": {
-    "url": "https://github.com/dgma/hade-balancer/issues"
+    "url": "https://github.com/dgma/withdraw-bot/issues"
   },
-  "homepage": "https://github.com/dgma/hade-balancer#readme",
+  "homepage": "https://github.com/dgma/withdraw-bot#readme",
   "keywords": [
-    "node.js",
-    "ts",
-    "web3",
-    "kit",
-    "viem"
+    "cli",
+    "api",
+    "bot",
+    "ccxt",
+    "crypto",
+    "web3"
   ],
-  "author": "Dogma Labs",
+  "author": "Dzmitry Lahunouski",
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
     "node": ">=18.12.0"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "viem": "^2.13.3"
+    "express": "^4.19.2",
+    "prompt": "^1.3.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/prompt": "^1.1.8",
+    "nodemon": "^3.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.0",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
