--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "withdraw-bot",
+  "name": "mono-helpers",
   "version": "0.0.1",
-  "description": "Node.js app for randomized automatic withdrawal",
+  "description": "Web3 helpers CLI",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.ts",
-    "serve": "tsc; NODE_ENV=production node dist/index.js",
     "build": "tsc",
     "test": "jest --passWithNoTests",
     "lint": "eslint src/**/*.ts",
     "prepare": "husky install",
-    "typecheck": "tsc --noEmit --project ./tsconfig.json",
-    "encrypt:dev": "ts-node scripts/input",
-    "encrypt": "NODE_ENV=production ts-node scripts/input"
+    "typecheck": "tsc --noEmit --project ./tsconfig.json"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dgma/withdraw-bot.git"
+    "url": "git+https://github.com/dgma/mono-helpers.git"
   },
   "bugs": {
-    "url": "https://github.com/dgma/withdraw-bot/issues"
+    "url": "https://github.com/dgma/mono-helpers/issues"
   },
-  "homepage": "https://github.com/dgma/withdraw-bot#readme",
+  "homepage": "https://github.com/dgma/mono-helpers#readme",
   "keywords": [
     "cli",
     "api",
@@ -36,15 +32,14 @@
     "node": ">=18.12.0"
   },
   "dependencies": {
+    "@commander-js/extra-typings": "^12.1.0",
+    "commander": "^12.1.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "prompt": "^1.3.0"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/prompt": "^1.1.8",
-    "nodemon": "^3.1.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.0",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
@@ -60,6 +55,7 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.5",
+    "nodemon": "^3.1.0",
     "prettier": "^3.3.0",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
