--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "mono-helpers",
   "version": "0.0.1",
   "description": "Web3 helpers CLI",
-  "main": "index.js",
   "scripts": {
     "build": "tsc",
     "test": "jest --passWithNoTests",
@@ -29,13 +28,23 @@
   "author": "Dzmitry Lahunouski",
   "license": "SEE LICENSE IN LICENSE",
   "engines": {
-    "node": ">=18.12.0"
+    "node": ">=20.11.0"
   },
   "dependencies": {
     "@commander-js/extra-typings": "^12.1.0",
+    "@cosmjs/crypto": "^0.32.3",
+    "@cosmjs/encoding": "^0.32.3",
+    "@scure/bip32": "^1.4.0",
+    "bip32": "^4.0.0",
+    "bip39": "^3.1.0",
+    "bitcoinjs-lib": "^6.1.5",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "ecpair": "^2.1.0",
+    "ethers": "^6.13.0",
+    "micro-key-producer": "github:killroy192/micro-key-producer#feat/application",
+    "micro-sol-signer": "^0.4.2",
+    "tiny-secp256k1": "^2.2.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
