--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,15 @@
 Dockerfile
 .dockerignore
+docker-compose*
 node_modules
 npm-debug.log
 README.md
-.next
-.git
-.gitignore
-.linterstagedrc.json
-jest.config.js
-.env.example
+.git*
+.husky
+.linterstagedrc
+jest*
+.env*
+eslint*
+.editorconfig
+.prettierrc
+LICENSE
