--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es2021",
-    "module": "commonjs",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "target": "ESNext",
     "strict": true,
+    "isolatedModules": true,
     "esModuleInterop": true,
-    "outDir": "dist",
-    "declaration": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
+    "noEmit": true,
+    "outDir": "./dist",
+    "resolveJsonModule": true,
+    "paths": {
+      "src/*": ["./src/*"]
+    }
   },
   "exclude": ["dist", "node_modules"],
   "include": ["./src"]
