--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -7,7 +7,7 @@ runs:
     - uses: actions/setup-node@v4
       with:
         cache: "npm"
-        node-version: 18.x
+        node-version: 20.11.0
     - uses: actions/cache@v4
       id: cache
       with:
