--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - name: Run unit tests
-        run: npm run test
+        run: make test
   build:
     needs: test
     runs-on: ubuntu-latest
