--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "ecpair": "^2.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "ethers": "^6.13.0",
     "micro-key-producer": "^0.7.0",
     "micro-sol-signer": "^0.4.2",
