--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,8 @@
     },
   },
 
+  "parser": "@typescript-eslint/parser",
+
   "rules": {
     "node/no-missing-import": "off",
     "node/no-unpublished-import": "off",
