--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "micro-sol-signer": "^0.4.2",
     "tiny-secp256k1": "^2.2.3",
     "tsx": "^4.15.7",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "viem": "^2.16.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
