--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@cosmjs/encoding": "^0.32.3",
     "@inquirer/prompts": "^5.0.7",
     "@scure/bip32": "^1.4.0",
+    "axios": "^1.7.2",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.5",
@@ -41,6 +42,7 @@
     "ecpair": "^2.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "ethers": "^6.13.0",
+    "hpagent": "^1.2.0",
     "micro-key-producer": "^0.7.0",
     "micro-sol-signer": "^0.4.2",
     "tiny-secp256k1": "^2.2.3",
