--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@inquirer/prompts": "^5.0.7",
     "@scure/bip32": "^1.4.0",
     "axios": "^1.7.2",
+    "axios-retry": "^4.4.1",
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.5",
