--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "ethers": "^6.13.0",
     "hpagent": "^1.2.0",
+    "joi": "^17.13.3",
     "micro-key-producer": "^0.7.0",
     "micro-sol-signer": "^0.4.2",
     "tiny-secp256k1": "^2.2.3",
