fuel with alchemy

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ PROXY_PASS=AAAAAAAAAAAA
 PROXY_HOST=xproxy.site
 PROXY_PORT=11111
 PROXY_REBOOT=https://changeip.mobileproxy.space/?proxy_key=
+ALCHEMY_RPC_KEY=
