okx withdraw init

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ PROXY_HOST=xproxy.site
 PROXY_PORT=11111
 PROXY_REBOOT=https://changeip.mobileproxy.space/?proxy_key=
 ALCHEMY_RPC_KEY=
+OKX_API_KEY=
+OKX_SECRET_KEY=
+OKX_PASSWORD=
