--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bip32": "^4.0.0",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.5",
+    "ccxt": "^4.3.59",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "ecpair": "^2.1.0",
