migrate funding to config

--- a/.app.config.example.json
+++ b/.app.config.example.json
@@ -18,7 +18,9 @@
   },
   "packages": {
     "funding": {
-      "chain": "eth"
+      "chain": "eth",
+      "filters": ["noFuel"],
+      "depositRange": [100, 200]
     }
   }
 }
