Feat/conf migration (#1)
* migrate funding to config

* refactor to cli

* folder structure

--- a/.app.config.example.json
+++ b/.app.config.example.json
@@ -16,9 +16,22 @@
     "secret": "xxxxxx",
     "password": "xxxxxxx"
   },
-  "packages": {
+  "cli": {
     "funding": {
-      "chain": "eth"
+      "chain": "eth",
+      "filters": ["noFuel"],
+      "depositRange": [100, 200]
+    },
+    "fuel": {
+      "minDeposit": 100
+    },
+    "report": {
+      "type": ["l1Balance", "scroll", "fuel"],
+      "save": true
+    },
+    "profiles": {
+      "amount": 60,
+      "chains": ["btc", "evm", "sol", "tia", "atom"]
     }
   }
 }
