--- a/.app.config.example.json
+++ b/.app.config.example.json
@@ -26,7 +26,8 @@
         100,
         200
       ],
-      "lteBalance": 30
+      "lteBalance": 30,
+      "maxFee": 1.5
     },
     "fuel": {
       "minDeposit": 100
