--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   funding:
     image: mono
-    # restart: always
+    restart: always
     build:
       context: .
     command: ["make", "funding"]
