--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,15 @@ services:
     logging: *loggin
     secrets:
       - master_key
+  scroll-kelp:
+    image: mono
+    restart: always
+    build:
+      context: .
+    command: ["make", "scroll-kelp"]
+    logging: *loggin
+    secrets:
+      - master_key
 secrets:
   master_key:
     file: ./master_key
