--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,22 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# production
-/dist
-
 # misc
 .DS_Store
 *.pem
 
 # debug
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
 
 # typescript
 *.tsbuildinfo
+
+# production
+/dist
+
+# dependencies
+/node_modules
+
+# app special files
 .profiles
 .mnemonics.json
 reports/
 !src/**/*
-.app.secrets
 master_key
