--- a/.apprc
+++ b/.apprc
@@ -14,6 +14,10 @@
       "lteBalance": 50,
       "maxFee": 2
     },
+    "distribute": {
+      "chain": "mainnet",
+      "address": "0xxxxxxx"
+    },
     "fuel": {
       "minDeposit": 30
     },
