--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
 version: "3.7"
 
 services:
-  funding:
+  mono:
     image: mono
     restart: always
     build:
       context: .
-    command: ["make", "funding"]
     secrets:
       - master_key
     logging: &loggin
@@ -14,60 +13,6 @@ services:
       options:
         max-file: "5"
         max-size: "100m"
-  fuel:
-    image: mono
-    restart: always
-    build:
-      context: .
-    command: ["make", "fuel"]
-    logging: *loggin
-    secrets:
-      - master_key
-  scroll-kelp:
-    image: mono
-    restart: always
-    build:
-      context: .
-    command: ["make", "scroll-kelp"]
-    logging: *loggin
-    secrets:
-      - master_key
-  scroll-canvas:
-    image: mono
-    restart: always
-    build:
-      context: .
-    command: ["make", "scroll-canvas"]
-    logging: *loggin
-    secrets:
-      - master_key
-  symbioticYT2:
-    image: mono
-    restart: always
-    build:
-      context: .
-    command: ["make", "distributeERC"]
-    logging: *loggin
-    secrets:
-      - master_key
-  karakYT:
-    image: mono
-    restart: always
-    build:
-      context: .
-    command: ["make", "distributeERC"]
-    logging: *loggin
-    secrets:
-      - master_key
-  fuelDust:
-    image: mono
-    restart: always
-    build:
-      context: .
-    command: ["make", "distributeERC"]
-    logging: *loggin
-    secrets:
-      - master_key
 secrets:
   master_key:
     file: ./master_key
