--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build
-        run: docker compose build funding;
+        run: docker compose build;
   deploy_sources:
     needs: build
     runs-on: ubuntu-latest
