--- a/.apprc
+++ b/.apprc
@@ -34,6 +34,9 @@
           "fuel"
         ],
         "save": true
+      },
+      "scroll": {
+        "save": true
       }
     },
     "profiles": {
